<resources>
    <string name="app_name">Android Basics</string>

    <!-- general strings -->
    <string name="continue_button_label">Continuar</string>

    <string name="starter_activity_message">Antes de começarmos, como você gostaria de ser chamado?</string>
    <string name="starter_activity_hint">Nome</string>
    <string name="starter_activity_name_error_message">Informe o seu nome.</string>

    <string name="hello_activity_title">Olá, %s!</string>
    <string name="hello_activity_message">Que bom ver você por aqui!</string>
    <string name="hello_activity_button_label">Ok, vamos lá!</string>
    <string name="hello_activity_not_show_again">Não mostrar novamente.</string>

    <string name="total">Total</string>
    <string name="current_order_products_title">Confira seu pedido</string>
    <string name="current_order_products_message">Confira os itens e o valor total antes de enviar seu pedido.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
