<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:paddingBottom="32dp">

        <TextView
            android:id="@id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/current_order_products_title"
            android:textColor="@color/turquoise_blue"
            android:textSize="@dimen/big_font_size" />

        <TextView
            android:id="@+id/message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="8dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/current_order_products_message"
            android:textSize="13dp" />

        <LinearLayout
            android:id="@+id/content_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="vertical">

            <FrameLayout
                android:id="@+id/products_fragment_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="24dp"
                android:background="@color/white_two"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:padding="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/total"
                        android:textAllCaps="true"
                        android:textSize="@dimen/normal_font_size"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/current_order_count"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/turquoise_blue"
                            android:textSize="13dp"
                            tools:text="2 itens" />

                        <TextView
                            android:id="@+id/current_order_amount"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/turquoise_blue"
                            android:textSize="18dp"
                            android:textStyle="bold"
                            tools:text="R$100,00" />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <Button
                android:id="@+id/continue_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="32dp"
                android:background="@drawable/bg_turquoise_blue_rounded_corners"
                android:text="Continuar"
                android:textColor="@android:color/white" />

        </LinearLayout>

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>